--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,7 +62,8 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "timezone-mock": "^1.3.6",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "ws": ">=8.17.1"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
