--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ botocore==1.27.96
     # via
     #   boto3
     #   s3transfer
-certifi==2023.7.22
+certifi==2024.7.4
     # via
     #   -r requirements.in
     #   requests
@@ -24,7 +24,7 @@ charset-normalizer==2.1.1
     # via requests
 click==8.1.3
     # via flask
-cryptography==42.0.4
+cryptography==43.0.1
     # via
     #   -r requirements.in
     #   python-jose
@@ -48,8 +48,10 @@ itsdangerous==2.1.2
     # via
     #   -r requirements.in
     #   flask
-jinja2==3.1.3
-    # via flask
+jinja2==3.1.5
+    # via
+    #   -r requirements.in
+    #   flask
 jmespath==1.0.1
     # via
     #   boto3
@@ -84,7 +86,7 @@ python-jose[cryptography]==3.3.0
     # via -r requirements.in
 pyyaml==6.0
     # via -r requirements.in
-requests==2.31.0
+requests==2.32.0
     # via -r requirements.in
 rsa==4.9
     # via python-jose
@@ -96,7 +98,7 @@ six==1.16.0
     #   python-dateutil
 tomli==2.0.1
     # via pytest
-urllib3==1.26.18
+urllib3==1.26.19
     # via
     #   -r requirements.in
     #   botocore
